[package]
name = "fake_data_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
postgres = "0.19.7"
mongodb = "2.8.2"
serde = { version = "1.0.198", features = ["derive"] }
tokio = "1.37.0"