[package]
name = "dbPerfomance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fake = { version = "2.9.2", features = ["derive"] }
postgres = "0.19.7"
mongodb = "2.8.2"
serde = { version = "1.0.198", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = "0.7.10"

# [[bin]]
# name = "dbPerformance"
# path = "src/main.rs"